test/compiler/pass/helloworld.bt
print("hello world");

func printhelloworld() -> unit {
  print("hello world");
}
/*
printhelloworld();
*/