test/compiler/fail/duplicate-func.bt
func bar() -> unit {
    int a = 1;
}

func bar() -> unit {
    print("duplicate");
}
